feat: add favicon

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Coffee House</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="assets/img/favicon.ico" />
 </head>
 <body>
-    <img src="assets/img/Backdrop.png" alt="Backdrop"/>
+    <img src="assets/img/img-hero.jpg" alt="Coffee" class="img-hero-image" />
 </body>
 </html>
